infrastructure/kong/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: kong
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - hosts:
        - api.sol-wms.store
      secretName: kong-tls
  rules:
    - host: api.sol-wms.store
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kong-proxy
                port:
                  number: 80
